Revisions during classes

--- a/P2023.AIBCCSS.L10.L11.L12.FondamentiDiDataScienceNelloSviluppoSoftware.tex
+++ b/P2023.AIBCCSS.L10.L11.L12.FondamentiDiDataScienceNelloSviluppoSoftware.tex
@@ -1100,8 +1100,7 @@ $(\forall a, b, c, d \in \mathbb{R} , b \neq 0, d \neq 0)~~ r_{X,Y} = r_{(a + bX
 {\centerline{About the Pearson Correlation Coefficient (2/2)}}
 
 \begin{itemize}
-\item The Pearson correlation coefficient is also often expressed as:
-\item It ranges from -1 to 1: $-1 \leq r_{X,Y} \leq 1$
+\item The Pearson correlation coefficient ranges from -1 to 1: $-1 \leq r_{X,Y} \leq 1$
 \begin{itemize}
 \item $ r_{X,Y}=1$ means perfect linear relationship
 \begin{itemize}
