--- a/P2023.AIBCCSS.L13.L14.InferencesNonParametricApproachesAndLogisticRegression.tex
+++ b/P2023.AIBCCSS.L13.L14.InferencesNonParametricApproachesAndLogisticRegression.tex
@@ -808,7 +808,7 @@ The fundamental hypotheses to have an \textcolor{red}{exact} application of the 
 {\centerline{Z test for the evaluation of the mean (1/2)}}
 
 \begin{itemize}
-\item Let as assume to have a sample $\{X_1 \ldots X_n\}$ with average $\overline {X}$
+\item Let as assume to have a sample $\{X_1 \ldots X_n\}$ with average $\mu_0$
 \item We assume that this sample comes from a population with mean $\mu$
 \item We want to determine whether this sample does not belong to a population distributed as $N(\mu_0,\sigma)$ with an acceptable probability of error $\alpha$
 \item We can build the null hypothesis as:  $H_0: \mu = \mu_0 $
@@ -826,7 +826,7 @@ The fundamental hypotheses to have an \textcolor{red}{exact} application of the 
 
 \begin{itemize}
 \item We need to compute the Z statistics:
-\[ Z={\frac {\overline {X}-\mu _{0}}{\sigma /{\sqrt {n}}}} \]
+\[ Z={\frac {X-\mu _{0}}{\sigma /{\sqrt {n}}}} \]
 \item We need then to look up in the table the probability of Z, considering that in this case we accept a variation with respect to $\mu_0$ in both directions (lower or larger)
 \end{itemize}
 
